--- a/packages/@jsii/runtime/package.json
+++ b/packages/@jsii/runtime/package.json
@@ -17,7 +17,7 @@
     "directory": "packages/@jsii/runtime"
   },
   "engines": {
-    "node": ">= 12.4.0"
+    "node": ">= 12.7.0"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -35,8 +35,7 @@
   },
   "dependencies": {
     "@jsii/kernel": "^0.0.0",
-    "@jsii/spec": "^0.0.0",
-    "semver": "^7.3.5"
+    "@jsii/spec": "^0.0.0"
   },
   "devDependencies": {
     "@scope/jsii-calc-base": "^0.0.0",
