--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1420,6 +1420,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "gshpychka",
+      "name": "Glib Shpychka",
+      "avatar_url": "https://avatars.githubusercontent.com/u/23005347?v=4",
+      "profile": "https://github.com/gshpychka",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "repoType": "github",
