--- a/packages/jsii-pacmak/package.json
+++ b/packages/jsii-pacmak/package.json
@@ -62,7 +62,8 @@
     "@types/semver": "^7.3.10",
     "jsii": "^0.0.0",
     "jsii-build-tools": "^0.0.0",
-    "jsii-calc": "^3.20.120"
+    "jsii-calc": "^3.20.120",
+    "pyright": "^1.1.266"
   },
   "keywords": [
     "jsii",
