--- a/packages/@jsii/kernel/package.json
+++ b/packages/@jsii/kernel/package.json
@@ -34,7 +34,8 @@
     "@jsii/spec": "^0.0.0",
     "fs-extra": "^10.1.0",
     "lockfile": "^1.0.4",
-    "tar": "^6.1.11"
+    "tar": "^6.1.11",
+    "v8-compile-cache": "^2.3.0"
   },
   "devDependencies": {
     "@scope/jsii-calc-base": "^0.0.0",
